Modificaçao do b.html pelo A

--- a/b.html
+++ b/b.html
@@ -5,6 +5,6 @@
 	<title>B.html</title>
 </head>
 <body>
-	<h1>Este arquivo é um B.agateemieli</h1>
+	<h1>Este arquivo é um B.agateemieli aqui é federel</h1>
 </body>
 </html>
